force-app/main/default/objects/File__c/File__c.object-meta.xml
<CustomObject>
    <label>File</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>