force-app/main/default/objects/File__c/fields/CP_Is_Cloned__c.field-meta.xml
<CustomField>
    <fullName>CP_Is_Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used by the system to track either file record is cloned from MDF request to Claim or not.</description>
    <label>CP Is Cloned</label>
    <type>Checkbox</type>
</CustomField>