force-app/main/default/objects/File__c/fields/Download__c.field-meta.xml
<CustomField>
    <fullName>Download__c</fullName>
    <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+Attachment_ID__c, IMAGE(&quot;/resource/1468929341000/CP_DownloadIcon&quot;, &quot;Download File&quot;,20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Download</label>
    <type>Text</type>
</CustomField>