force-app/main/default/objects/File__c/fields/File_Description__c.field-meta.xml
<CustomField>
    <fullName>File_Description__c</fullName>
    <description>Some Description about the file.</description>
    <label>File Description</label>
    <type>TextArea</type>
</CustomField>