force-app/main/default/objects/File__c/fields/Fund_Request__c.field-meta.xml
<CustomField>
    <fullName>Fund_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Request</label>
    <referenceTo>SFDC_MDF__c</referenceTo>
    <relationshipLabel>Files</relationshipLabel>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>