force-app/main/default/objects/File__c/fields/Pre_Approval_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Document_Type__c</fullName>
    <description>Describes Pre-Approval Document Type.</description>
    <label>Pre-Approval Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event Agenda</fullName>
            </value>
            <value>
                <fullName>Employment Offer Letter</fullName>
            </value>
            <value>
                <fullName>Print/Graphics Proofs</fullName>
            </value>
            <value>
                <fullName>Quotes/Estimates</fullName>
            </value>
            <value>
                <fullName>Rate Cards</fullName>
            </value>
            <value>
                <fullName>Event Registration Form</fullName>
            </value>
            <value>
                <fullName>Resume/CV</fullName>
            </value>
            <value>
                <fullName>Incentive Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>