force-app/main/default/objects/File__c/fields/Proof_of_Performance_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Performance_Document_Type__c</fullName>
    <description>Document type which partner need to upload while claim submission.</description>
    <label>Proof of Performance Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agenda</fullName>
            </value>
            <value>
                <fullName>List of Attendees</fullName>
            </value>
            <value>
                <fullName>Pay Stub</fullName>
            </value>
            <value>
                <fullName>Photos</fullName>
            </value>
            <value>
                <fullName>Proofs</fullName>
            </value>
            <value>
                <fullName>Receipts</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>